[package]
name = "emwind"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", default-features = false, features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync", "fs"] }
emwin-parse = { path = "../emwin-parse" }
notify = "5.0"
dirs = "4.0"
log = { version = "0.4" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
