[package]
name = "goes-cfg"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", default-features = false, features = ["io-std", "io-util", "fs"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_warn"] }
dirs = "4.0"
