[package]
name = "goes-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
chrono = "0.4"
nom = "7.1"
nom-supreme = "0.8"
uom = { version = "0.33", default-features = false, features = ["f32", "si", "std"] }
bitflags = "1.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "uom/serde"]
