[package]
name = "goes-site"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2"
actix-files = "0.6"
askama_actix = "0.13"
askama = { version = "0.11", features = ["with-actix-web"] }

[package.metadata.deb]
name = "goes-site"
depends = "$auto, systemd"
extended-description = "HTTP server displaying data from the GOES database"
section = "utils"
assets = [
    ["target/release/goes-site", "usr/bin/goes-site", "755"],
]
maintainer-scripts = "deb/scripts"
priority="optional"

[package.metadata.deb.systemd-units]
unit-scripts = "deb/service"
