[package]
name = "goes-site"
authors = ["bkliebmann@gmail.com"]
description = "GOES database HTTP server"
license = "LGPL-2.1-only"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.2"
actix-files = "0.6"
askama_actix = "0.13"
askama = { version = "0.11", features = ["with-actix-web"] }
sqlx = { version = "0.6", features = ["mysql", "chrono", "runtime-tokio-native-tls"] }
log = { version = "0.4", features = ["release_max_level_warn"] }
chrono = "0.4"
env_logger = "0.8"
goes-cfg = { path = "../goes-cfg" }

[package.metadata.deb]
name = "goes-site"
depends = "$auto, systemd"
extended-description = "HTTP server displaying data from the GOES database"
section = "utils"
assets = [
    ["target/release/goes-site", "usr/bin/goes-site", "755"],
    ["static/*", "usr/share/goes-site/static/", "444"],
]
maintainer-scripts = "deb/scripts"
priority="optional"

[package.metadata.deb.systemd-units]
unit-scripts = "deb/service"
