[package]
name = "goesd"
authors = ["bkliebmann@gmail.com"]
description = "System service for processing GOES-R EMWIN and imagery files"
license = "LGPL-2.1-only"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", default-features = false, features = ["rt", "io-std", "io-util", "macros", "sync", "fs"] }
goes-parse = { path = "../goes-parse" }
goes-sql = { path = "../goes-sql" }
goes-cfg = { path = "../goes-cfg" }
notify = { version = "5.0", default-features = false, features = ["macos_fsevent"] }
log = { version = "0.4", features = ["release_max_level_warn"] }
stderrlog = { version = "0.5", default-features = false }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls"] }
chrono = "0.4"
fuser = "0.11"

[package.metadata.deb]
name = "goesd"
depends = "$auto, systemd"
extended-description = "Systemd service that automatically parses new EMWIN data pulled from a satellite downlink"
section = "utils"
assets = [
    ["target/release/goesd", "usr/bin/goesd", "755"],
]
maintainer-scripts = "deb/scripts"
priority="optional"
conf-files = ["${XDG_CONFIG_HOME}/goesd/config.toml"]

[package.metadata.deb.systemd-units]
unit-scripts = "deb/service"
